Finished the assignment, used the uuid module

--- a/Main/Develop/public/notes.html
+++ b/Main/Develop/public/notes.html
@@ -46,5 +46,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/assets/js/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js"></script>
   </body>
 </html>
